@@ -1,14 +1,14 @@
-# Tomcat
+# Docker下Elasticsearch的使用
 
 > 目录:[https://github.com/dolyw/DockerStudy](https://github.com/dolyw/DockerStudy)
 
-#### `Docker`下`Elasticsearch`的安装
+#### Docker下Elasticsearch的使用
 
-当然首先启动`Docker`，然后去`Docker Hub`: [https://hub.docker.com/_/elasticsearch?tab=tags](https://hub.docker.com/_/elasticsearch?tab=tags)查询下Tag版本
+当然首先启动Docker，可以去`Docker Hub`: [https://hub.docker.com/_/elasticsearch?tab=tags](https://hub.docker.com/_/elasticsearch?tab=tags)查询下Tag版本
 
 可以先`docker search elasticsearch`查询一下，看下连接有没有问题
 
-然后直接使用命令`docker pull elasticsearch`下载最新版本，可以加上版本号下载对应版本`docker pull elasticsearch:7.3.0`，这里我们使用`7.3.0`版本
+然后直接使用命令`docker pull elasticsearch`下载最新版本，可以加上冒号版本号下载对应版本`docker pull elasticsearch:7.3.0`，这里我们使用7.3.0版本
 
 ```
 PS C:\> docker search elasticsearch
@@ -34,7 +34,7 @@ docker.io/library/elasticsearch:7.3.0
 PS C:\>
 ```
 
-这样就下载完成了，先使用命令`docker images`查询`Elasticsearch`镜像ID
+这样就下载完成了，先使用命令`docker images`查询Elasticsearch镜像ID
 
 ```
 PS C:\> docker images
@@ -43,93 +43,163 @@ tomcat              8.5.43-jdk8-adoptopenjdk-openj9   689bdcef64fe        22 hou
 elasticsearch       7.3.0                             bdaab402b220        3 weeks ago         806MB
 ```
 
-直接用命令`docker run -d --name es -p 9200:9200 -p 9300:9300 bdaab402b220`启动`Elasticsearch`容器
+在启动前我们先在自己主机建立ES的配置文件elasticsearch.yml和一个data空目录
 
-启动失败，记录一下
-
-```
-ERROR: [1] bootstrap checks failed
-[1]: the default discovery settings are unsuitable for production use; at least one of [discovery.seed_hosts, discovery.seed_providers, cluster.initial_master_nodes] must be configured
-{"type": "server", "timestamp": "2019-08-16T09:16:21,507+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "stopping ..."  }
-{"type": "server", "timestamp": "2019-08-16T09:16:21,540+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "stopped"  }
-{"type": "server", "timestamp": "2019-08-16T09:16:21,541+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "closing ..."  }
-{"type": "server", "timestamp": "2019-08-16T09:16:21,555+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "closed"  }
-{"type": "server", "timestamp": "2019-08-16T09:16:21,557+0000", "level": "INFO", "component": "o.e.x.m.p.NativeController", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "Native controller process has stopped - no new native processes can be started"  }
-OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated in version 9.0 and will likely be removed in a future release.
-{"type": "server", "timestamp": "2019-08-16T09:19:35,554+0000", "level": "INFO", "component": "o.e.e.NodeEnvironment", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "using [1] data paths, mounts [[/ (overlay)]], net usable_space [53.6gb], net total_space [58.8gb], types [overlay]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:35,557+0000", "level": "INFO", "component": "o.e.e.NodeEnvironment", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "heap size [1007.3mb], compressed ordinary object pointers [true]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:35,565+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "node name [4b3b20c7e066], node ID [HrDiSkjbQYqvTJMNSi1hqg], cluster name [docker-cluster]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:35,565+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "version[7.3.0], pid[1], build[default/docker/de777fa/2019-07-24T18:30:11.767338Z], OS[Linux/4.9.184-linuxkit/amd64], JVM[Oracle Corporation/OpenJDK 64-Bit Server VM/12.0.1/12.0.1+12]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:35,566+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "JVM home [/usr/share/elasticsearch/jdk]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:35,566+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "JVM arguments [-Xms1g, -Xmx1g, -XX:+UseConcMarkSweepGC, -XX:CMSInitiatingOccupancyFraction=75, -XX:+UseCMSInitiatingOccupancyOnly, -Des.networkaddress.cache.ttl=60, -Des.networkaddress.cache.negative.ttl=10, -XX:+AlwaysPreTouch, -Xss1m, -Djava.awt.headless=true, -Dfile.encoding=UTF-8, -Djna.nosys=true, -XX:-OmitStackTraceInFastThrow, -Dio.netty.noUnsafe=true, -Dio.netty.noKeySetOptimization=true, -Dio.netty.recycler.maxCapacityPerThread=0, -Dlog4j.shutdownHookEnabled=false, -Dlog4j2.disable.jmx=true, -Djava.io.tmpdir=/tmp/elasticsearch-11874788328507458153, -XX:+HeapDumpOnOutOfMemoryError, -XX:HeapDumpPath=data, -XX:ErrorFile=logs/hs_err_pid%p.log, -Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m, -Djava.locale.providers=COMPAT, -Des.cgroups.hierarchy.override=/, -Dio.netty.allocator.type=unpooled, -XX:MaxDirectMemorySize=536870912, -Des.path.home=/usr/share/elasticsearch, -Des.path.conf=/usr/share/elasticsearch/config, -Des.distribution.flavor=default, -Des.distribution.type=docker, -Des.bundled_jdk=true]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,503+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [aggs-matrix-stats]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,503+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [analysis-common]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,503+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [data-frame]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,504+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [flattened]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,504+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [ingest-common]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,504+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [ingest-geoip]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,505+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [ingest-user-agent]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,505+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [lang-expression]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,505+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [lang-mustache]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,505+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [lang-painless]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,506+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [mapper-extras]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,506+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [parent-join]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,506+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [percolator]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,506+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [rank-eval]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,507+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [reindex]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,507+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [repository-url]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,510+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [transport-netty4]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,519+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [vectors]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,520+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-ccr]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,520+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-core]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,521+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-deprecation]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,521+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-graph]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,521+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-ilm]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,521+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-logstash]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,522+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-ml]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,522+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-monitoring]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,522+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-rollup]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,522+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-security]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,523+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-sql]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,523+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-voting-only-node]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,523+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "loaded module [x-pack-watcher]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:37,524+0000", "level": "INFO", "component": "o.e.p.PluginsService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "no plugins loaded"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:41,731+0000", "level": "INFO", "component": "o.e.x.s.a.s.FileRolesStore", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "parsed [0] roles from file [/usr/share/elasticsearch/config/roles.yml]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:42,377+0000", "level": "INFO", "component": "o.e.x.m.p.l.CppLogMessageHandler", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "[controller/101] [Main.cc@110] controller (64 bit): Version 7.3.0 (Build ff2f774f78ce63) Copyright (c) 2019 Elasticsearch BV"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:42,960+0000", "level": "DEBUG", "component": "o.e.a.ActionModule", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "Using REST wrapper from plugin org.elasticsearch.xpack.security.Security"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:43,584+0000", "level": "INFO", "component": "o.e.d.DiscoveryModule", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "using discovery type [zen] and seed hosts providers [settings]"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,684+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "initialized"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,685+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "starting ..."  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,865+0000", "level": "INFO", "component": "o.e.t.TransportService", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "publish_address {172.17.0.2:9300}, bound_addresses {0.0.0.0:9300}"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,873+0000", "level": "INFO", "component": "o.e.b.BootstrapChecks", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "bound or publishing to a non-loopback address, enforcing bootstrap checks"  }
-ERROR: [1] bootstrap checks failed
-[1]: the default discovery settings are unsuitable for production use; at least one of [discovery.seed_hosts, discovery.seed_providers, cluster.initial_master_nodes] must be configured
-{"type": "server", "timestamp": "2019-08-16T09:19:44,881+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "stopping ..."  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,910+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "stopped"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,910+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "closing ..."  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,932+0000", "level": "INFO", "component": "o.e.n.Node", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "closed"  }
-{"type": "server", "timestamp": "2019-08-16T09:19:44,934+0000", "level": "INFO", "component": "o.e.x.m.p.NativeController", "cluster.name": "docker-cluster", "node.name": "4b3b20c7e066",  "message": "Native controller process has stopped - no new native processes can be started"  }
+```yml
+# 设置支持Elasticsearch-Head
+http.cors.enabled: true
+http.cors.allow-origin: "*"
+# 设置集群Master配置信息
+cluster.name: myEsCluster
+# 节点的名字，一般为Master或者Slave
+node.name: master
+# 节点是否为Master，设置为true的话，说明此节点为Master节点
+node.master: true
+# 设置网络，如果是本机的话就是127.0.0.1，其他服务器配置对应的IP地址即可(0.0.0.0支持外网访问)
+network.host: 0.0.0.0
+# 设置对外服务的Http端口，默认为 9200，可以修改默认设置
+http.port: 9200
+# 设置节点间交互的TCP端口，默认是9300
+transport.tcp.port: 9300
+# 手动指定可以成为Master的所有节点的Name或者IP，这些配置将会在第一次选举中进行计算
+cluster.initial_master_nodes: ["master"]
 ```
 
-#### `Docker`下`Elasticsearch`的集群
+然后直接用下面命令启动Elasticsearch容器，加-d就表示后台运行，配置文件和空目录如下对应起来
 
-直接用下面三个命令启动三个`Elasticsearch`容器
-
-```
-docker run -d --name es1 -p 9200:9200 -p 9300:9300 bdaab402b220
-docker run -d --name es2 -p 9201:9200 -p 9301:9300 bdaab402b220
-docker run -d --name es3 -p 9202:9200 -p 9302:9300 bdaab402b220
+``` 
+docker run -e ES_JAVA_OPTS="-Xms256m -Xmx256m" -v D:/tools/docker/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml -v D:/tools/docker/elasticsearch/data:/usr/share/elasticsearch/data --name es -p 9200:9200 -p 9300:9300 bdaab402b220
 ```
 
-结果
+注：设置-e ES_JAVA_OPTS="-Xms256m -Xmx256m"是因为/etc/elasticsearch/jvm.options默认JVM最大最小内存是2G，读者启动容器后 可用`docker stats`命令查看
+
+可能会需要确认是否共享磁盘，都确认就可以，等一会启动成功浏览器查看: [http://127.0.0.1:9200](http://127.0.0.1:9200)，返回下面的字符，代表启动成功
+
+```json
+{
+  "name" : "master",
+  "cluster_name" : "myEsCluster",
+  "cluster_uuid" : "5SZ13bMbSKOx1Nd5iIyruA",
+  "version" : {
+    "number" : "7.3.0",
+    "build_flavor" : "default",
+    "build_type" : "docker",
+    "build_hash" : "de777fa",
+    "build_date" : "2019-07-24T18:30:11.767338Z",
+    "build_snapshot" : false,
+    "lucene_version" : "8.1.0",
+    "minimum_wire_compatibility_version" : "6.8.0",
+    "minimum_index_compatibility_version" : "6.0.0-beta1"
+  },
+  "tagline" : "You Know, for Search"
+}
+```
+
+#### Docker下Elasticsearch的集群
+
+建立三个配置文件elasticsearch1.yml，elasticsearch2.yml，elasticsearch3.yml和三个data文件夹，data1，data2，data3
+
+* elasticsearch1.yml
+
+```yml
+# 设置支持Elasticsearch-Head
+http.cors.enabled: true
+http.cors.allow-origin: "*"
+# 设置集群Master配置信息
+cluster.name: myEsCluster
+# 节点的名字，一般为Master或者Slave
+node.name: master
+# 节点是否为Master，设置为true的话，说明此节点为Master节点
+node.master: true
+# 设置网络，如果是本机的话就是127.0.0.1，其他服务器配置对应的IP地址即可(0.0.0.0支持外网访问)
+network.host: 0.0.0.0
+# 设置对外服务的Http端口，默认为 9200，可以修改默认设置
+http.port: 9500
+# 设置节点间交互的TCP端口，默认是9300
+transport.tcp.port: 9300
+# 手动指定可以成为Master的所有节点的Name或者IP，这些配置将会在第一次选举中进行计算
+cluster.initial_master_nodes: ["master"]
+# 集群发现节点信息，一般为其他节点IP加交互端口，这里一般填主机IP
+discovery.seed_hosts: ["192.168.2.58:9301", "192.168.2.58:9302"]
+```
+
+* elasticsearch2.yml
+
+```yml
+# 设置集群Slave配置信息
+cluster.name: myEsCluster
+# 节点的名字，一般为Master或者Slave
+node.name: slave1
+# 节点是否为Master，设置为true的话，说明此节点为master节点
+node.master: false
+# 设置对外服务的Http端口，默认为 9200，可以修改默认设置
+http.port: 9600
+# 设置节点间交互的TCP端口，默认是9300
+transport.tcp.port: 9301
+# 设置网络，如果是本机的话就是127.0.0.1，其他服务器配置对应的IP地址即可(0.0.0.0支持外网访问)
+network.host: 0.0.0.0
+# 集群发现节点信息，一般为其他节点IP加交互端口，这里一般填主机IP
+discovery.seed_hosts: ["192.168.2.58:9300", "192.168.2.58:9302"]
+```
+
+* elasticsearch3.yml
+
+```yml
+# 设置集群Slave配置信息
+cluster.name: myEsCluster
+# 节点的名字，一般为Master或者Slave
+node.name: slave2
+# 节点是否为Master，设置为true的话，说明此节点为master节点
+node.master: false
+# 设置对外服务的Http端口，默认为 9200，可以修改默认设置
+http.port: 9700
+# 设置节点间交互的TCP端口，默认是9300
+transport.tcp.port: 9302
+# 设置网络，如果是本机的话就是127.0.0.1，其他服务器配置对应的IP地址即可(0.0.0.0支持外网访问)
+network.host: 0.0.0.0
+# 集群发现节点信息，一般为其他节点IP加交互端口，这里一般填主机IP
+discovery.seed_hosts: ["192.168.2.58:9300", "192.168.2.58:9301"]
+```
+
+然后启动三个，一个Master，两个Slave
+
+``` 
+docker run -e ES_JAVA_OPTS="-Xms256m -Xmx256m" -d -v D:/tools/docker/elasticsearch/elasticsearch1.yml:/usr/share/elasticsearch/config/elasticsearch.yml -v D:/tools/docker/elasticsearch/data1:/usr/share/elasticsearch/data --name es1 -p 9500:9500 -p 9300:9300 bdaab402b220
+```
+
+``` 
+docker run -e ES_JAVA_OPTS="-Xms256m -Xmx256m" -d -v D:/tools/docker/elasticsearch/elasticsearch2.yml:/usr/share/elasticsearch/config/elasticsearch.yml -v D:/tools/docker/elasticsearch/data2:/usr/share/elasticsearch/data --name es2 -p 9600:9600 -p 9301:9301 bdaab402b220
+```
+
+``` 
+docker run -e ES_JAVA_OPTS="-Xms256m -Xmx256m" -d -v D:/tools/docker/elasticsearch/elasticsearch3.yml:/usr/share/elasticsearch/config/elasticsearch.yml -v D:/tools/docker/elasticsearch/data3:/usr/share/elasticsearch/data --name es3 -p 9700:9700 -p 9302:9302 bdaab402b220
+```
+
+等一会启动成功浏览器查看集群节点信息: [http://127.0.0.1:9500/_cat/nodes?v](http://127.0.0.1:9500/_cat/nodes?v)
 
 ```
-PS C:\> docker run -d --name es1 -p 9200:9200 -p 9300:9300 bdaab402b220
-9cdcf754433647f5142e7537d3d57e69377c7ec38caeab92e5bc900f93d92720
-PS C:\> docker run -d --name es2 -p 9201:9200 -p 9301:9300 bdaab402b220
-0d5c688cadde11764522cfbc8623651423834688cfe40f958303e249e1c59fdb
-PS C:\> docker run -d --name es3 -p 9202:9200 -p 9302:9300 bdaab402b220
-354f398ccf70b0aa779c7ef4c2a2edcdf1dd114d036685d6981e98ffb8638bab
+ip         heap.percent ram.percent cpu load_1m load_5m load_15m node.role master name
+172.17.0.2           34          95   3    0.69    0.50     0.20 dim       *      master
+172.17.0.4           49          95   3    0.69    0.50     0.20 di        -      slave1
+172.17.0.3           48          95   3    0.69    0.50     0.20 di        -      slave1
 ```
 
-使用命令`Elasticsearch`查看运行的容器
+* Docker集群就OK了
+
+#### Docker下Elasticsearch-Head的安装
+
+可以先`docker search elasticsearch`查询一下，看下有没有问题，然后直接使用命令`docker pull mobz/elasticsearch-head:5`下载，加上冒号版本号下载对应版本，这里我们使用5版本
+
+下载完成了，直接启动
+
+```
+docker run -d --name es-head -p 9100:9100 mobz/elasticsearch-head:5
+```
+
+等一会启动成功浏览器查看: [http://127.0.0.1:9100](http://127.0.0.1:9100)，把连接地址改成[http://localhost:9500](http://localhost:9500)，点击连接即可，连接成功，可以看到三个节点的集群信息，就这样Elasticsearch-Head就安装成功了
+
+#### 搭建参考
+
+1. 感谢东北小狐狸的【拆分版】Docker-compose构建Elasticsearch 7.1.0集群: [https://www.cnblogs.com/hellxz/p/docker_es_cluster.html](https://www.cnblogs.com/hellxz/p/docker_es_cluster.html)
+2. 感谢belonghuang157405的docker简易搭建ElasticSearch集群: [https://blog.csdn.net/belonghuang157405/article/details/83301937](https://blog.csdn.net/belonghuang157405/article/details/83301937)
+3. 感谢ZeroOne01的使用docker安装elasticsearch伪分布式集群以及安装ik中文分词插件: [https://blog.51cto.com/zero01/2285604](https://blog.51cto.com/zero01/2285604)
